--- a/plugins/eventon-action-user/assets/au_styles.css
+++ b/plugins/eventon-action-user/assets/au_styles.css
@@ -166,8 +166,8 @@
 	#eventon_form .evoau_table .row:hover{
 		background-color: #F9F9F9;
 	}
-	#eventon_form .evoau_table .row.err{border-left:5px solid #FA938B;background-color: #FFF7F7}
-	#eventon_form .evoau_table .row.err:hover{background-color: #FFEDEB}
+	#eventon_form .evoau_table .row.err{border-left:5px solid #FA938B;background-color: #FA938B}
+	#eventon_form .evoau_table .row.err:hover{background-color: #FFF7F7}
 	#eventon_form .evoau_table .row.evoau_sub_formfield {
 		border-left:5px solid #d2d2d2;
 		padding: 0 0 0 15px;
@@ -237,9 +237,8 @@
   			font-size: 32px;
 		}
 		body .evoau_success_msg p{color: #ffffff;
-			line-height: 45px;
+			line-height: 1.5;
 	  		margin: 0;
-	  		text-transform: uppercase;
 	  		font-size: 18px;
 	  		text-align: center;
 	  		padding-top: 20px;
@@ -252,6 +251,7 @@
 	  		border: 3px solid #ffffff;
 	  		border-radius: 50%;
 	  		margin: 0 auto;
+				margin-bottom: 10px;
 	  		box-sizing: border-box;
 		}
 		.evoau_success_msg p b:before{
