--- a/plugins/eventON/assets/css/eventon_styles.css
+++ b/plugins/eventON/assets/css/eventon_styles.css
@@ -3,6 +3,16 @@
  * @version		2.5
  */
 
+/* Overrides to Hide unecessary Elements from the form */
+p.evoau_show_rsvp {display:none}
+p.evoau_show_whos_coming {display:none}
+p.evoau_min_cap {display:none}
+p.evors_max_active {display:none}
+p.event_org_contact {display:none}
+p.event_org_address {display:none}
+p.event_org_link {display:none}
+/* End Overrides */
+
 /* Created for New Blue COnnect */
 .eventover{float:left;}
 .featured{float:left;}
