Hide Exclue, Feature, and Cancel from "My Events"

--- a/plugins/eventON/assets/css/eventon_styles.css
+++ b/plugins/eventON/assets/css/eventon_styles.css
@@ -12,6 +12,7 @@ p.event_org_contact {display:none}
 p.event_org_address {display:none}
 p.event_org_link {display:none}
 span.enterNew.formBtnS {display:none;}
+div.edit_special {display:none;}
 /* End Overrides */
 
 /* Created for New Blue COnnect */
