cursor is now a pointer for the like button

--- a/themes/newblueconnect/style.css
+++ b/themes/newblueconnect/style.css
@@ -4936,6 +4936,7 @@ body .evo_search_results_count span{
 /* Bigger like button */
 .evowi{
 	width:110px;
+	cursor:pointer;
 }
 
 /*--------------------------------------------------------------
