--- a/plugins/eventON/assets/css/eventon_styles.css
+++ b/plugins/eventON/assets/css/eventon_styles.css
@@ -518,7 +518,7 @@ div.edit_special {display:none;}
 		content:'\25BC';
 		margin-left: 2px;
 		position: absolute;
-		right:6px;
+		right:3px;
 		top:50%;
 		transform: translateY(-50%);
 	}
@@ -526,7 +526,7 @@ div.edit_special {display:none;}
 		content:'\25B2';
 		margin-left: 2px;
 		position: absolute;
-		right:6px;
+		right:3px;
 		top:50%;
 		transform: translateY(-50%);
 	}
@@ -540,6 +540,10 @@ div.edit_special {display:none;}
 	@media screen and (min-width: 560px){
 		.entry-content .eventon_filter_line{
 			width: 100%;
+		}
+		.entry-content .eventon_filter_line .filtering_set_val::after,
+		.entry-content .eventon_filter_line .filtering_set_val.menuArrow::after{
+			right:6px;
 		}
 		.entry-content .eventon_filter_line .eventon_filter{
 			width:31%;
@@ -557,6 +561,10 @@ div.edit_special {display:none;}
 	@media screen and (max-width: 1000px) and (min-width: 560px), (min-width: 1360px){
 		.evo_widget .eventon_filter_line{
 			width: 100%;
+		}
+		.evo_widget .eventon_filter_line .filtering_set_val::after,
+		.evo_widget .eventon_filter_line .filtering_set_val.menuArrow::after{
+			right:6px;
 		}
 		.evo_widget .eventon_filter_line .eventon_filter{
 			width:31%;
