--- a/themes/newblueconnect/style.css
+++ b/themes/newblueconnect/style.css
@@ -49,6 +49,7 @@ Dark Blue: 003c71
 20.0 Print
 21.0 EventON
 22.0 New Blue Connect Features
+23.0 Custom Style
 --------------------------------------------------------------*/
 
 /*--------------------------------------------------------------
@@ -1035,7 +1036,6 @@ select {
 	border-radius: 3px;
 	height: 3em;
 	max-width: 100%;
-	width:100%;
 }
 
 input[type="radio"],
@@ -4769,15 +4769,10 @@ body .sidebar-past .evo_sort_btn p{
 	padding-left: 20px !important;
 }
 
-.eventon_single_event .evo_end,
-.evo_search_results .evo_end{
+.eventon_single_event .evo_end{
 	transform: translate(-25px,33px);
 	font-size: 14px !important;
 	font-weight: 300;
-}
-
-.evo_search_results .evo_end{
-	transform: translate(-50px,48px);
 }
 
 .eventon_single_event .evo_end:before{
@@ -5121,4 +5116,62 @@ body .evo_search_results_count span{
 	display: none;
   width : 0;
   height: 0;
+}
+
+/* Custom Styles */
+
+.delegation {
+	padding:20px;
+	background:#fff;
+	color:#000;
+	margin-bottom: 20px;
+}
+
+.delegation h4 {
+	color:#000;
+	font-weight: bold;
+  text-transform: uppercase;
+  font-family: roboto,oswald,'arial narrow';
+  font-size: 18px;
+}
+
+.delegation p {
+color:#000;
+}
+
+.delegation a {
+	color: #0071c5;
+  -webkit-box-shadow: inset 0 0px 0 rgba(15, 15, 15, 1);
+  box-shadow: inset 0 0px 0 rgba(15, 15, 15, 1);
+}
+
+.delegation ul {
+	border:0px;
+}
+
+.delegation ul li {
+	list-style:none;
+	width: 100%;
+	padding: 15px;
+	border-top: 1px solid #ccc;
+	border-bottom: 1px solid #ccc;
+	background: #f1f1f1;
+	margin:10px 0px;
+}
+
+.delegation a.fa {
+	float: right;
+	font-size: 24px;
+	cursor: pointer;
+}
+
+.delegation input[type="submit"] {
+    margin: 10px 0px;
+    width: 100%;
+    background-color: #009fdf;
+    padding: 15px;
+}
+
+.delegation input[type="submit"]:hover{
+	background-color:#0071c5;
 }
