--- a/themes/newblueconnect/style.css
+++ b/themes/newblueconnect/style.css
@@ -5087,7 +5087,7 @@ body .evo_search_results_count span{
 }
 
 .sidebar-dash{
-	margin: 19px 0 0 0;
+	margin: 0px 0 0 0;
 }
 
 .comment-list li{
@@ -5254,4 +5254,15 @@ color:#000;
 		text-align: left;
 		margin-top: 20px;
 	}
+}
+
+/*Charts*/
+.my-events-summary{
+	background: #0071c5;
+  padding: 15px 20px;
+}
+
+.chart-container{
+	background: #fff;
+	padding: 20px;
 }
